k8s/deployment.yml
# 1. Backend Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: joycrew-backend-deployment
  labels:
    app: joycrew-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: joycrew-backend
  template:
    metadata:
      labels:
        app: joycrew-backend
    spec:
      # IRSA를 통한 보안 권한 관리
      serviceAccountName: joycrew-service-account
      containers:
        - name: backend-container
          image: "566105751077.dkr.ecr.ap-northeast-2.amazonaws.com/joycrew-backend:latest"
          ports:
            - containerPort: 8082
          
          # AWS Secrets Manager 데이터를 환경변수로 주입
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"

          readinessProbe:
            httpGet:
              path: /
              port: 8082
            initialDelaySeconds: 40
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8082
            initialDelaySeconds: 90
            periodSeconds: 20

---
# 2. Application Load Balancer (Ingress)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: joycrew-backend-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:566105751077:certificate/d5930928-10dc-4f4d-9cc4-67770a94522b
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
    - host: api.joycrew.co.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: joycrew-backend-service
                port:
                  number: 80

---
# 3. Backend Service
apiVersion: v1
kind: Service
metadata:
  name: joycrew-backend-service
spec:
  selector:
    app: joycrew-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
  type: ClusterIP
